--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 "Project Logs for GearBOX-PCB"
 History
+History\**
 __Previews
+__Previews\**
 GOST-A3-Landscape.SchDot
 GOST-A4-Landscape.SchDot
+Project Logs for GearBOX
